<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VoIP.ms SMS</string>

    <string name="conversations_action_search">Search</string>
    <string name="conversations_action_select_dids">Select DID</string>
    <string name="conversations_action_settings">Settings</string>
    <string name="conversations_action_help">Help</string>
    <string name="conversations_action_credits">Credits</string>
    <string name="conversations_action_delete">Delete</string>
    <string name="conversations_action_add">Add</string>
    <string name="conversations_action_mark_read">Mark as read</string>
    <string name="conversations_action_mark_unread">Mark as unread</string>
    <string name="conversations_list_view_item_checked">Checked</string>
    <string name="conversations_select_did_dialog_title">Select DID</string>
    <string name="conversations_first_run_dialog_text">To use this application, you must set your VoIP.ms portal email address and API password in Settings. If you do not know what an API password is, see Help.\n\nAfter setting your email and password, you will also need to pick an SMS-enabled DID using the Select DID menu in order to receive texts.\n\nYou may also wish to enable push notifications. For more information, see Help.</string>

    <string name="conversation_action_call">Make a call</string>
    <string name="conversation_action_search">Search</string>
    <string name="conversation_action_delete">Delete</string>
    <string name="conversation_action_send">Send</string>
    <string name="conversation_action_copy">Copy text</string>
    <string name="conversation_action_share">Share</string>
    <string name="conversation_text_hint">Send message</string>

    <string name="new_conversation_action_keyboard">Show keyboard</string>
    <string name="new_conversation_action_dialpad">Show dialpad</string>
    <string name="new_conversation_text_hint">To</string>
    <string name="new_conversation_manual_entry">Manual entry</string>

    <string name="preferences_name">Settings</string>
    <string name="preferences_category_account">Account</string>
    <string name="preferences_account_email">Email address</string>
    <string name="preferences_account_password">API password</string>
    <string name="preferences_category_sms">SMS</string>
    <string name="preferences_sms_days_to_sync">Days to sync SMS messages</string>
    <string name="preferences_sms_days_to_sync_default_value" translatable="false">7</string>
    <string name="preferences_category_sms_notifications">Notifications</string>
    <string name="preferences_sms_notification">Notifications</string>
    <string name="preferences_sms_notification_summary">Enable push notifications using the developer\'s Google Cloud Messaging server</string>
    <string name="preferences_enable_notifications_text">To enable push notifications, you must enter the following URL in the \'SMS URL Callback\' field of the SMS settings for your DID on the VoIP.ms portal:\n\nhttp://voipmssms-kourlas.rhcloud.com/sms_callback?did={DID}\n\nNote that the developer\'s Google Cloud Messaging server will store your DID to forward callbacks from VoIP.ms to your device. See Help for more details.</string>
    <string name="preferences_sms_notification_ringtone">Sound</string>
    <string name="preferences_sms_notification_ringtone_default_value" translatable="false">content://settings/system/notification_sound</string>
    <string name="preferences_sms_notification_vibrate">Vibrate</string>
    <string name="preferences_category_reset">Reset</string>
    <string name="preferences_reset">Clear SMS cache</string>
    <string name="preferences_reset_summary">Delete local copy of SMS database</string>

    <string name="help_name">Help</string>

    <string name="credits_name">Credits</string>

    <string name="api_update_did_email">Could not retrieve DIDs because no VoIP.ms portal email has been set. (update_did_email)</string>
    <string name="api_update_did_password">Could not retrieve DIDs because no VoIP.ms API password has been set. (update_did_password)</string>
    <string name="api_update_did_unsupported_encoding_exception">Could not retrieve DIDs because your VoIP.ms portal email or API password contains invalid characters. (update_did_unsupported_encoding_exception)</string>
    <string name="api_update_did_network">Could not retrieve DIDs because no network connection is available. (update_did_network)</string>
    <string name="api_update_did_no_dids">Could not retrieve DIDs because there are no DIDs in your account. (update_did_no_dids)</string>
    <string name="api_update_did_parse">Could not retrieve DIDs because the VoIP.ms API response could not be parsed. (update_did_parse)</string>
    <string name="api_update_did_request">Could not retrieve DIDs because the application failed to fetch information from the VoIP.ms API. (update_did_request)</string>
    <string name="api_update_did_api">Could not retrieve DIDs because the VoIP.ms API returned an error. (update_did_api_</string>

    <string name="api_update_smses_email">Could not update the SMS database because no VoIP.ms portal email has been set. (update_smses_email)</string>
    <string name="api_update_smses_password">Could not update the SMS database because no VoIP.ms API password has been set. (update_smses_password)</string>
    <string name="api_update_smses_did">Could not update the SMS database because no DID has been selected. (update_smses_did)</string>
    <string name="api_update_smses_unsupported_encoding_exception">Could not update the SMS database because your VoIP.ms portal email or API password contains invalid characters. (update_smses_unsupported_encoding_exception)</string>
    <string name="api_update_smses_network">Could not update the SMS database because no network connection is available. (update_smses_network)</string>
    <string name="api_update_smses_request">Could not update the SMS database because the application failed to fetch information from the VoIP.ms API. (update_sms_request)</string>
    <string name="api_update_smses_parse">Could not update the SMS database because the VoIP.ms API response could not be parsed. (update_smses_parse)</string>
    <string name="api_update_smses_api">Could not update the SMS database because the VoIP.ms API returned an error. (update_smses_api_</string>

    <string name="api_delete_sms_email">Could not delete the SMS because no VoIP.ms portal email has been set. (delete_sms_email)</string>
    <string name="api_delete_sms_password">Could not delete the SMS because no VoIP.ms API password has been set. (delete_sms_password)</string>
    <string name="api_delete_sms_unsupported_encoding_exception">Could not delete the SMS because your VoIP.ms portal email or API password contains invalid characters. (delete_sms_unsupported_encoding_exception)</string>
    <string name="api_delete_sms_network">Could not delete the SMS because no network connection is available. (delete_sms_network)</string>
    <string name="api_delete_sms_request">Could not delete the SMS because the application failed to fetch information from the VoIP.ms API. (delete_sms_request)</string>
    <string name="api_delete_sms_parse">Could not delete the SMS because the VoIP.ms API response could not be parsed. (delete_sms_parse)</string>
    <string name="api_delete_sms_api">Could not delete the SMS because the VoIP.ms API returned an error. (delete_sms_api_</string>

    <string name="api_send_sms_email">Could not send the SMS because no VoIP.ms portal email has been set. (send_sms_email)</string>
    <string name="api_send_sms_password">Could not send the SMS because no VoIP.ms API password has been set. (send_sms_password)</string>
    <string name="api_send_sms_did">Could not send the SMS because no DID has been selected. (send_sms_did)</string>
    <string name="api_send_sms_unsupported_encoding_exception">Could not send the SMS because your VoIP.ms portal email or API password contains invalid characters. (send_sms_unsupported_encoding_exception)</string>
    <string name="api_send_sms_network">Could not send the SMS because no network connection is available. (send_sms_network)</string>
    <string name="api_send_sms_request">Could not send the SMS because the application failed to fetch information from the VoIP.ms API. (send_sms_request)</string>
    <string name="api_send_sms_parse">Could not send the SMS because the VoIP.ms API response could not be parsed. (send_sms_parse)</string>
    <string name="api_send_sms_api">Could not send the SMS because the VoIP.ms API returned an error. (send_sms_api_</string>

    <string name="api_new_conversation_email">Could not create new conversation because no VoIP.ms portal email has been set. (new_conversation_email)</string>
    <string name="api_new_conversation_password">Could not create new conversation because no VoIP.ms API password has been set. (new_conversation_password)</string>
    <string name="api_new_conversation_did">Could not create new conversation because no DID has been selected. (new_conversation_did)</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
