<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_category_account">
        <EditTextPreference
                android:defaultValue=""
                android:inputType="textEmailAddress"
                android:key="api_email"
                android:title="@string/preferences_account_email"/>
        <EditTextPreference
                android:defaultValue=""
                android:inputType="textPassword"
                android:key="api_password"
                android:title="@string/preferences_account_password"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_sms">
        <ListPreference
                android:defaultValue="@string/preferences_sms_days_to_sync_default_value"
                android:entries="@array/preferences_sms_days_to_sync_entries"
                android:entryValues="@array/preferences_sms_days_to_sync_values"
                android:key="sms_days_to_sync"
                android:title="@string/preferences_sms_days_to_sync"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_sms_notifications">
        <SwitchPreference
                android:defaultValue="true"
                android:key="sms_notification"
                android:summary="@string/preferences_sms_notification_summary"
                android:title="@string/preferences_sms_notification"/>
        <RingtonePreference
                android:key="sms_notification_ringtone"
                android:ringtoneType="notification"
                android:defaultValue="@string/preferences_sms_notification_ringtone_default_value"
                android:dependency="sms_notification"
                android:title="@string/preferences_sms_notification_ringtone"/>
        <SwitchPreference
                android:defaultValue="true"
                android:key="sms_notification_vibrate"
                android:dependency="sms_notification"
                android:title="@string/preferences_sms_notification_vibrate"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_reset">
        <SwitchPreference
                android:defaultValue="false"
                android:key="reset"
                android:summary="@string/preferences_reset_summary"
                android:title="@string/preferences_reset"/>
    </PreferenceCategory>
</PreferenceScreen>