<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/call_button"
            android:icon="@drawable/ic_call_white_24dp"
            android:title="@string/conversation_action_call"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/search_button"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/conversation_action_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="never|collapseActionView"/>
    <item
            android:id="@+id/delete_button"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/conversation_action_delete"
            app:showAsAction="never"/>
</menu>